account-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.22.0 (955b78124)
  creationTimestamp: null
  labels:
    io.kompose.service: account
  name: account
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: account
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.22.0 (955b78124)
      creationTimestamp: null
      labels:
        io.kompose.network/arangodb_go_net: "true"
        io.kompose.network/postgres_go_net: "true"
        io.kompose.network/rabbitmq_go_net: "true"
        io.kompose.network/redis_go_net: "true"
        io.kompose.service: account
    spec:
      containers:
        - command:
            - sh
            - ./entrypoints/account.sh
          image: account
          name: account
          ports:
            - containerPort: 8084
            - containerPort: 3000
          resources: {}
      restartPolicy: Always
status: {}
