account-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.22.0 (955b78124)
  creationTimestamp: null
  labels:
    io.kompose.service: account
  name: account
spec:
  ports:
    - name: "8084"
      port: 8084
      targetPort: 8084
    - name: "3000"
      port: 3000
      targetPort: 3000
  selector:
    io.kompose.service: account
status:
  loadBalancer: {}
