arangodb-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.22.0 (955b78124)
  creationTimestamp: null
  labels:
    io.kompose.service: arangodb
  name: arangodb
spec:
  ports:
    - name: "8529"
      port: 8529
      targetPort: 8529
  selector:
    io.kompose.service: arangodb
status:
  loadBalancer: {}
