art-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.22.0 (955b78124)
  creationTimestamp: null
  labels:
    io.kompose.service: art
  name: art
spec:
  ports:
    - name: "8082"
      port: 8082
      targetPort: 8082
    - name: "3000"
      port: 3000
      targetPort: 3000
  selector:
    io.kompose.service: art
status:
  loadBalancer: {}
