auth-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.22.0 (955b78124)
  creationTimestamp: null
  labels:
    io.kompose.service: auth
  name: auth
spec:
  ports:
    - name: "8081"
      port: 8081
      targetPort: 8081
    - name: "3000"
      port: 3000
      targetPort: 3000
  selector:
    io.kompose.service: auth
status:
  loadBalancer: {}
