chat-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.22.0 (955b78124)
  creationTimestamp: null
  labels:
    io.kompose.service: chat
  name: chat
spec:
  ports:
    - name: "9090"
      port: 9090
      targetPort: 9090
    - name: "3000"
      port: 3000
      targetPort: 3000
  selector:
    io.kompose.service: chat
status:
  loadBalancer: {}
