playlist-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.22.0 (955b78124)
  creationTimestamp: null
  labels:
    io.kompose.service: playlist
  name: playlist
spec:
  ports:
    - name: "8083"
      port: 8083
      targetPort: 8083
    - name: "3000"
      port: 3000
      targetPort: 3000
  selector:
    io.kompose.service: playlist
status:
  loadBalancer: {}
